--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-hr": "^1.1.4",
+    "react-native-hr-component": "^2.0.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
