--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "expo": "^35.0.0",
     "expo-constants": "~7.0.0",
+    "expo-permissions": "~7.0.0",
+    "expo-sensors": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -19,6 +21,7 @@
     "react-native-hr-component": "^2.0.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-sound-recorder": "^1.3.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "2.0.1",
     "react-redux": "^7.1.3",
